<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/shop_home_alt"
        android:title="@string/shop_home"
        android:icon="@drawable/home"
        android:tint="@android:color/white"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/shop_cart_alt"
        android:title="@string/shop_cart"
        android:icon="@drawable/cart"
        android:tint="@android:color/white"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/shop_logout_alter"
        android:title="@string/shop_log_out"
        android:icon="@drawable/logout"
        android:tint="@android:color/white"
        app:showAsAction="always"
        />
</menu>