<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tile_bg"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/register_edittext_email"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/strong_hint"
        app:layout_constraintBottom_toTopOf="@+id/register_edittext_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/register_edittext_password"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/strong_hint"
        app:layout_constraintBottom_toTopOf="@+id/register_edittext_password_verify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/register_edittext_password_verify"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:hint="@string/register_confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/strong_hint"
        app:layout_constraintBottom_toTopOf="@+id/register_checkbox_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/register_button_register"
        android:layout_width="171dp"
        android:layout_height="57dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/register_btn"
        android:onClick="register_button"
        android:text="@string/register_iregister"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@+id/register_btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/register_btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="152dp"
        android:backgroundTint="#00FFFFFF"
        android:onClick="activity_login"
        android:text="@string/register_back"
        android:textAlignment="center"
        android:textColor="@color/simple_link"
        android:textColorLink="@color/black"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/register_register"
        android:textColor="@color/black"
        android:textSize="44sp"
        app:layout_constraintBottom_toTopOf="@+id/register_edittext_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.443" />

    <CheckBox
        android:id="@+id/register_checkbox_data"
        android:layout_width="292dp"
        android:layout_height="57dp"
        android:layout_marginBottom="16dp"
        android:onClick="animate"
        android:text="@string/register_data"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/register_button_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/text_decoration"
        android:layout_width="262dp"
        android:layout_height="29dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/text_dec" />

    <ImageButton
        android:id="@+id/register_btn_mic"
        android:layout_width="26dp"
        android:layout_height="34dp"
        android:layout_marginBottom="28dp"
        android:background="@null"
        android:onClick="startSpeechToText"
        app:layout_constraintBottom_toTopOf="@+id/register_edittext_password"
        app:layout_constraintStart_toEndOf="@+id/register_edittext_email"
        app:srcCompat="@drawable/microphone" />
</androidx.constraintlayout.widget.ConstraintLayout>