<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tile_bg"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="270dp"
        android:layout_height="37dp"
        android:layout_marginTop="44dp"
        android:gravity="center_horizontal"
        android:text="EXAMPLE@EMAIL.COM"
        android:textSize="22sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/profile_edittext_password"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/profile_new_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/strong_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_email" />

    <EditText
        android:id="@+id/profile_edittext_password_verify"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/register_confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/strong_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_edittext_password" />

    <Button
        android:id="@+id/profile_password_btn"
        android:layout_width="209dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:onClick="change_password"
        android:text="@string/profile_change_password"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_edittext_password_verify" />

    <Button
        android:id="@+id/profile_delete_profile"
        android:layout_width="228dp"
        android:layout_height="47dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/register_btn"
        android:onClick="delete_account"
        android:text="@string/profile_delete_account"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/design_default_color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="195dp"
        android:layout_height="68dp"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

</androidx.constraintlayout.widget.ConstraintLayout>