<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tile_bg"
    tools:context=".GamblingActivity">

    <TextView
        android:id="@+id/gamble_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/gamble_title"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gamble_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gamble_win_big"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamble_title"
        app:layout_constraintVertical_bias="0.039" />

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamble_title"
        app:layout_constraintVertical_bias="0.164">

        <HorizontalScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textColor="@color/black"
            android:fadingEdgeLength="60dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:requiresFadingEdge="horizontal"
            android:scrollbars="none"
            android:clickable="false">

            <LinearLayout
                android:id="@+id/itemsContainer"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="match_parent"
                android:orientation="horizontal" />

        </HorizontalScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:clickable="false"
            android:focusable="false"
            android:textColor="@color/black" />

    </FrameLayout>

    <Button
        android:id="@+id/spinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:backgroundTint="@color/design_default_color_primary"
        android:text="@string/gamble_btn_spin"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
        app:layout_constraintVertical_bias="0.104" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="311dp"
        android:layout_height="243dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinButton"
        app:srcCompat="@drawable/gamble" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="57dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/spinButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/arrow_up" />


</androidx.constraintlayout.widget.ConstraintLayout>